--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 MONGO_URI=mongodb+srv://chienpvgch221136:Chienboybu1092004@mydbcluster.6kuho.mongodb.net/BDS
 JWT_SECRET=khongduocdau
+
+JWT_REFRESH_SECRET=refreshtokensecretkey
