triển hai ví user, các gói vip nạp tiền bằng sepay qua liên kết webhook và gửi thông báo về cho gmail khi thanh toán tiền

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ MONGO_URI=mongodb+srv://chienpvgch221136:Chienboybu1092004@mydbcluster.6kuho.mon
 JWT_SECRET=khongduocdau
 
 JWT_REFRESH_SECRET=refreshtokensecretkey
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=chienboybu1092004@gmail.com
+SMTP_PASS=lexr colu egmc ylvk
