thêm ggid để đăng nhập

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=chienboybu1092004@gmail.com
 SMTP_PASS=lexr colu egmc ylvk
+GOOGLE_CLIENT_ID=553136456875-tqr0t7fkqrsuoifccvvil3vl3k7qi97s.apps.googleusercontent.com
